vertical align fixed with bootstrap row

--- a/stylesheet/mycss.css
+++ b/stylesheet/mycss.css
@@ -43,14 +43,6 @@ section {
 	text-align: center;
 }
 
-.vertical-center {
-	margin: 0;
-	position: absolute;
-	top: 50%;
-	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);
-  }
-
 .social i{
 	color: #000000;
     font-size: 60px;
